[project]
name = "heartview-workshop"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Yuna Watanabe", email = "yuna-watanabe1923@g.ecc.u-tokyo.ac.jp" }
]
dependencies = [
    "pandas>=2.2.3",
    "numpy>=1.22,<2.1",
    "numba>=0.60.0",
    "matplotlib>=3.9.2",
    "flirt>=0.0.2",
    "tqdm>=4.66.5",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "plotly>=5.24.1",
    "dash-bootstrap-components>=1.6.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/heartview_workshop"]
